Sonar java:S6204 - use Stream#toList to return unmodified list.